--- a/about.html
+++ b/about.html
@@ -2,23 +2,75 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
     <link rel="stylesheet" href="style/style.css" type="text/css">
     <title>Sobre mi</title>
 </head>
 
-<body>
+<body class="about">
     <header>
         <nav>
             <a href="index.html"> <img src="assets/img/mapple.png" alt=""></a>
-            <ul class="kaushan-script-regular">
+            <ul class="outfit">
                 <li> <a href="index.html"><i class="fa-solid fa-house"></i> Home</a></li>
-                <li> <a href="disenos.html"><i class="fa-solid fa-image"></i> Diseños</a></li>
-                <li> <a href="about.html"><i class="fa-solid fa-user"></i> Sobre mi</a></li>
+                <li> <a href="disenos.html"><i class="fa-solid fa-image"></i> Galeria</a></li>
+                <li> <a href="about.html"><i class="fa-solid fa-user"></i> Trabajos</a></li>
                 <li> <a href="contact.html"><i class="fa-solid fa-inbox"></i> Contacto</a></li>
             </ul>
         </nav>
    </header>
+
+   <main>
+        
+        <h1 class="kaushan-script-regular">Trabajos sobre la película "Argentina 1985"</h1>
+
+        <article class="cards montserrat">
+            
+            <div class="card">
+                <img src="assets/img/cards/Lojo_Anamorfosis.jpg" alt="TP_ANA">
+                <div>
+                    <h2 class="kaushan-script-regular">Trabajo de Anamorfosis</h2>
+                    <p>Trabajo de Anamorfosis realizado en la materia de Diseño y Comunicación Visual I, en el cual se aplican las técnicas de perspectiva y distorsión para crear una imagen que solo puede ser vista correctamente desde un ángulo específico.</p>
+                </div>
+                <button>Ver más</button>
+            </div>
+
+            <div class="card">
+                <img src="assets/img/cards/Lojo_Fotografico.jpg" alt="TP_ANA">
+                <div>
+                    <h2 class="kaushan-script-regular">Trabajo Fotografico</h2>
+                    <p>Trabajo Fotografico realizado en la materia de Diseño y Comunicación Visual I, en el cual se utiliza una tecnica de photoshopeado para mezclar diferentes imagenes y crear una gran imagen vista desde otra perspectiva.</p>
+                </div>
+                <button>Ver más</button>
+            </div>
+
+            <div class="card">
+                <img src="assets/img/cards/Lojo_Sintesis.jpg" alt="TP_ANA">
+                <div>
+                    <h2 class="kaushan-script-regular">Trabajo de Sintesis</h2>
+                    <p>Trabajo de Sintesis realizado en la materia de Diseño y Comunicación Visual I, en el cual se aplican las técnicas de omision de atributos pero que aun se entienda las facciones de una persona.</p>
+                </div>
+                <button>Ver más</button>
+            </div>
+
+            <div class="card">
+                <img src="assets/img/cards/Pantalla ilustrativav2.jpg" alt="TP_ANA">
+                <div>
+                    <h2 class="kaushan-script-regular">Trabajo Ilustrativo</h2>
+                    <p>Trabajo Ilustrativo realizado en la materia de Diseño y Comunicación Visual I, en el cual se aplican las técnicas de ilustracion y dibujo donde integrado correctamente, permite obtener una nueva visionn sobre una tematica en especifico.</p>
+                </div>
+                <button>Ver más</button>
+            </div>
+
+
+        </article>
+
+   </main>
+
+   <footer class="montserrat">
+        <p>© 2025 Alanis Noah Lojo</p>
+    </footer>
 
 </body>
 </html>
