--- a/disenos.html
+++ b/disenos.html
@@ -7,61 +7,79 @@
     <link rel="stylesheet" href="style/style.css" type="text/css">
     <title>Diseños</title>
 </head>
+
 <body>
     <header>
         <nav>
             <a href="index.html"> <img src="assets/img/mapple.png" alt=""></a>
-            <ul class="kaushan-script-regular">
+            <ul class="outfit">
                 <li> <a href="index.html"><i class="fa-solid fa-house"></i> Home</a></li>
-                <li> <a href="disenos.html"><i class="fa-solid fa-image"></i> Diseños</a></li>
-                <li> <a href="about.html"><i class="fa-solid fa-user"></i> Sobre mi</a></li>
+                <li> <a href="disenos.html"><i class="fa-solid fa-image"></i> Galeria</a></li>
+                <li> <a href="about.html"><i class="fa-solid fa-user"></i> Trabajos</a></li>
                 <li> <a href="contact.html"><i class="fa-solid fa-inbox"></i> Contacto</a></li>
             </ul>
         </nav>
    </header>
     
-    <div id="carouselExampleAutoplaying" class="carousel slide" data-bs-ride="carousel">
-        <div class="carousel-inner">
-            <div class="carousel-item active">
-                <img src="assets/img/Lojo_Anamorfosis.jpg" class="d-block w-100" alt="...">
-                <div class="carousel-caption d-none d-md-block">
-                    <h5>Trabajo Anamorfosis de 1985</h5>
-                    <p>Objeto reinventado con otro significado.</p>
+   <main>
+        <h1 class="kaushan-script-regular"> Galeria de Fotografías</h1>
+        <h3 class="outfit">Fotografías tomadas en el Museo Nacional de las Bellas Artes</p><br>
+
+        <div id="carouselExampleAutoplaying" class="carousel slide" data-bs-ride="carousel">
+            <div class="carousel-inner">
+                <div class="carousel-item active">
+                    <img src="assets/img/galeria/20230329_132121.jpg" class="d-block w-100" alt="...">
+                    <div class="carousel-caption d-none d-md-block">
+                        <h5>El beso</h5>
+                    </div>
+                </div>
+                <div class="carousel-item">
+                    <img src="assets/img/galeria/20230329_133026.jpg" class="d-block w-100" alt="...">
+                    <div class="carousel-caption d-none d-md-block">
+                        <h5>Historia</h5>
+                    </div>
+                </div>
+                <div class="carousel-item">
+                    <img src="assets/img/galeria/20230329_133231.jpg" class="d-block w-100" alt="...">
+                    <div class="carousel-caption d-none d-md-block">
+                        <h5>La dama de rojo</h5>
+                    </div>
+                </div>
+                <div class="carousel-item">
+                    <img src="assets/img/galeria/20230329_134145.jpg" class="d-block w-100" alt="...">
+                    <div class="carousel-caption d-none d-md-block">
+                        <h5>El rencor</h5>
+                    </div>
+                </div>
+                <div class="carousel-item">
+                    <img src="assets/img/galeria/20230329_134544.jpg" class="d-block w-100" alt="...">
+                    <div class="carousel-caption d-none d-md-block">
+                        <h5>La Clarina</h5>
+                    </div>
+                </div>
+                <div class="carousel-item">
+                    <img src="assets/img/galeria/20230329_135210.jpg" class="d-block w-100" alt="...">
+                    <div class="carousel-caption d-none d-md-block">
+                        <h5>Vasija Barroca</h5>
+                    </div>
                 </div>
             </div>
-            <div class="carousel-item">
-                <img src="assets/img/Lojo_Sintesis.jpg" class="d-block w-100" alt="...">
-                <div class="carousel-caption d-none d-md-block">
-                    <h5>Trabajo de Sintesis de 1985</h5>
-                    <p>Rasgos faciales incompletos, pero figura reconocible.</p>
-                </div>
-            </div>
-            <div class="carousel-item">
-                <img src="assets/img/Pantalla ilustrativav2.jpg" class="d-block w-100" alt="...">
-                <div class="carousel-caption d-none d-md-block">
-                    <h5>Trabajo ilustrativo de 1985</h5>
-                    <p>"La memoria elige sus resultados"</p>
-                </div>
-            </div>
-            <div class="carousel-item">
-                <img src="assets/img/Lojo_Fotografico.jpg" class="d-block w-100" alt="...">
-                <div class="carousel-caption d-none d-md-block">
-                    <h5>Trabajo Fotografico de 1985</h5>
-                    <p>"El dolor une las memorias"</p>
-                </div>
-            </div>
+
+            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleAutoplaying" data-bs-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Previous</span>
+            </button>
+
+            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleAutoplaying" data-bs-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Next</span>
+            </button>
         </div>
+    </main>
 
-        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleAutoplaying" data-bs-slide="prev">
-            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-            <span class="visually-hidden">Previous</span>
-        </button>
-
-        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleAutoplaying" data-bs-slide="next">
-            <span class="carousel-control-next-icon" aria-hidden="true"></span>
-            <span class="visually-hidden">Next</span>
-        </button>
-    </div>
+    <footer class="montserrat">
+        <p>© 2025 Alanis Noah Lojo</p>
+    </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous"></script>
 </body>
