--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
     <link rel="stylesheet" href="style/style.css" type="text/css">
     <title>Home</title>
     
@@ -11,22 +13,25 @@
    <header>
         <nav>
             <a href="index.html"> <img src="assets/img/mapple.png" alt=""></a>
-            <ul class="kaushan-script-regular">
+            <ul class="outfit">
                 <li> <a href="index.html"><i class="fa-solid fa-house"></i> Home</a></li>
-                <li> <a href="disenos.html"><i class="fa-solid fa-image"></i> Diseños</a></li>
-                <li> <a href="about.html"><i class="fa-solid fa-user"></i> Sobre mi</a></li>
+                <li> <a href="disenos.html"><i class="fa-solid fa-image"></i> Galeria</a></li>
+                <li> <a href="about.html"><i class="fa-solid fa-user"></i> Trabajos</a></li>
                 <li> <a href="contact.html"><i class="fa-solid fa-inbox"></i> Contacto</a></li>
             </ul>
         </nav>
    </header>
 
    <main>
-        <div class="Portada">
-            <img src="assets/img/Lojo_Sintesis.jpg" alt="Portada">
+        
+        <img src="assets/img/myself.webp" alt="myself" id="myself">
+        <div class="Presentacion">
+            <h1 class="kaushan-script-regular"> Alanis Noah Lojo</h1>
+            <p>Hola! Bueno el titulo dice mi nombre, pero muchos me llaman Noah directamente. <br>Soy un diseñador junior en proceso de terminar mi Tecnicatura en Artes Multimediales, y actualmente cursando Programacion Web Full stack. <br>Esta pagina fue diseñada un poco para presentar mis dotes como programador, fotografo y artista. <br>Espero que disfruten la experiencia y les guste lo que ven!</p>
         </div>
    </main>
 
-   <footer>
+   <footer class="montserrat">
         <p>© 2025 Alanis Noah Lojo</p>
    </footer>
 
