--- a/contact.html
+++ b/contact.html
@@ -66,9 +66,9 @@
 
         <div>
             <h2 class="kaushan-script-regular">Seguime en mis redes!</h2>
-            <a href="https://www.instagram.com/noah_lojo/" target="_blank"><i class="fa-brands fa-instagram"></i></a>
-            <a href="https://www.facebook.com/noah.lojo" target="_blank"><i class="fa-brands fa-facebook"></i></a>
-            <a href="https://www.linkedin.com/in/alanis-noah-lojo-8b4b25248/" target="_blank"><i class="fa-brands fa-linkedin"></i></a>
+            <a href="https://www.instagram.com/noah.lojo_/" target="_blank"><i class="fa-brands fa-instagram"></i></a>
+            <a href="https://www.facebook.com/Alanis.Lojo" target="_blank"><i class="fa-brands fa-facebook"></i></a>
+            <a href="https://www.linkedin.com/in/alanis-lojo-35b205220/" target="_blank"><i class="fa-brands fa-linkedin"></i></a>
             <a href="https://wa.me/+5491166583649" target="_blank"><i class="fa-brands fa-whatsapp"></i></a>
         </div>
 
