--- a/disenos.html
+++ b/disenos.html
@@ -8,7 +8,7 @@
     <title>Diseños</title>
 </head>
 
-<body>
+<body class="disenos">
     <header>
         <nav>
             <a href="index.html"> <img src="assets/img/mapple.png" alt=""></a>
